<resources>
    <string name="app_name">BiometricServerApp</string>
    <string name="b_connect">Connect</string>
    <string name="tw_connect">Connect by entering its parameters</string>
    <string name="tI_hostname">Hostname/IP</string>
    <string name="tI_port">Port</string>
    <string name="you_are_connected_to">Connection to:</string>
    <string name="b_continue">continue</string>
    <string name="type_your_message">type your message</string>
    <string name="b_send">Send</string>
    <string name="opengallery">opengallery</string>
    <string name="image">image</string>
    <string name="back">back</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="activities">Activities</string>
    <string name="register">Register</string>
    <string name="find">Find</string>
    <string name="server_settings">Server Settings</string>
    <string name="registration">Registration</string>
    <string name="enter_name_of_person">Enter registration login</string>
    <string name="back_to_menu">back_to_menu</string>
    <string name="verificate">verify</string>
    <string name="verification">Verification</string>
    <string name="enter_login">Enter your login</string>
    <string name="results_of_preprocessing">Results of preprocessing</string>
    <string name="preprocessing">Preprocessing request</string>
    <string name="block_size">block size</string>
    <string name="lambda">lambda for Gabor filter </string>
    <string name="sigma">sigma parameter for Gabor filter</string>
    <string name="submit">submit</string>
    <string name="preprocessingrequest">Preprocess</string>
    <string name="extraction">Extraction</string>
    <string name="extractionReq">Extraction request</string>
    <string name="extractionRes">Extraction result</string>
    <string name="extract">Extract</string>
    <string name="quality_map">quality map</string>
    <string name="edit_contrast">edit contrast</string>
    <string name="binarization">binarization</string>
    <string name="color_map">color map</string>
    <string name="gabor_filter">gabor filter</string>
    <string name="skeleton">skeleton</string>


</resources>