<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tw_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/you_are_connected_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_hostname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/tI_hostname"
        app:layout_constraintEnd_toStartOf="@+id/tw_port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_port"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/tI_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tw_hostname"/>

    <TextView
        android:id="@+id/tw_status"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_information" />

    <Button
        android:id="@+id/b_continue"
        android:layout_width="121dp"
        android:layout_height="66dp"
        android:text="@string/b_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_status"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/b_back"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_continue"
        app:layout_constraintVertical_bias="0.059" />

</androidx.constraintlayout.widget.ConstraintLayout>
