<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0D5F4"
    android:backgroundTint="#EDDDF6"
    android:fadingEdge="horizontal|vertical"
    android:foreground="?android:attr/fingerprintAuthDrawable"
    android:foregroundGravity="top|clip_horizontal"
    android:foregroundTint="#6F22F6"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginTop="76dp"
        android:text="@string/activities"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_registerme"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        android:background="#6d00fc"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

    <Button
        android:id="@+id/b_find"
        android:background="#b47aff"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:layout_marginBottom="224dp"
        android:text="@string/find"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_servsett"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:background="#984cfc"
        android:text="@string/server_settings"

        app:layout_constraintBottom_toTopOf="@+id/b_find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_registerme"
        app:layout_constraintVertical_bias="0.489" />
</androidx.constraintlayout.widget.ConstraintLayout>