<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tw_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecdcfc"
    android:backgroundTint="#ecdcfc"
    android:fadingEdge="horizontal|vertical"
    android:foreground="?android:attr/fingerprintAuthDrawable"
    android:foregroundGravity="top|clip_horizontal"
    android:foregroundTint="#6F22F6"
    tools:context=".Registration_Activity">


    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="134dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_verify"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="347dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_login"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registration"
        app:layout_constraintVertical_bias="0.018">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tin_login"
            android:layout_width="318dp"
            android:layout_height="53dp"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/b_gallery1"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#FFFFFF"
        android:backgroundTint="#6d00fc"
        android:contentDescription="@string/opengallery"
        android:foreground="@android:drawable/ic_menu_gallery"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_verify"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/imageView_fingerprint1"
        android:layout_width="231dp"
        android:layout_height="315dp"
        android:background="#E0D5F4"
        android:backgroundTint="#EDDDF6"

        android:contentDescription="@string/image"
        android:foregroundTint="#605F5F"
        android:src="@drawable/finger"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/b_gallery1"
        app:layout_constraintTop_toBottomOf="@+id/til_login_verify"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/b_register"
        android:layout_width="113dp"
        android:layout_height="68dp"
        android:background="#6d00fc"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_fingerprint1"
        app:layout_constraintVertical_bias="0.289" />

    <ImageButton
        android:id="@+id/b_back_to_menu1"
        android:layout_width="42dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#ecdcfc"
        android:backgroundTint="#ecdcfc"
        android:contentDescription="@string/back_to_menu"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

</androidx.constraintlayout.widget.ConstraintLayout>